--- a/apropos.html
+++ b/apropos.html
@@ -8,18 +8,36 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main class="container">
-        <div class="contact-box" style="max-width: 800px; padding: 60px;">
-            <h1 style="font-size: 3rem; margin-bottom: 25px;">Qui sommes-nous ?</h1>
-            <p style="margin-bottom: 25px; font-size: 1.2rem; color:white; line-height:1.8;">
-                Fondé en 2030, <strong>FROST NEWS</strong> est né d'une nécessité : offrir aux citoyens de San Andreas une information pure, sans filtre politique.
-            </p>
-            <h3 style="color: var(--primary); margin-top: 40px; margin-bottom: 15px;">Manifeste 2035</h3>
-            <ul style="color: var(--text-muted); line-height: 2; list-style:none;">
-                <li><i class="fa-solid fa-check" style="color:var(--primary); margin-right:10px;"></i> Indépendance totale face aux conglomérats.</li>
-                <li><i class="fa-solid fa-check" style="color:var(--primary); margin-right:10px;"></i> Utilisation d'IA éthique pour la vérification.</li>
-                <li><i class="fa-solid fa-check" style="color:var(--primary); margin-right:10px;"></i> Protection des lanceurs d'alerte.</li>
-            </ul>
+    <main class="container" style="display:flex; align-items:center; min-height:80vh;">
+        
+        <div style="position: fixed; inset: 0; z-index: -1;">
+            <img src="assets/city.png" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.2; filter: blur(5px);">
+        </div>
+
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 50px; align-items: center;">
+            
+            <div class="contact-box" style="padding: 40px; border: 1px solid var(--border); background: rgba(5, 10, 20, 0.9);">
+                <h1 style="font-size: 3rem; margin-bottom: 25px;">ORIGIN <span style="color:var(--primary)">STORY</span></h1>
+                <p style="margin-bottom: 20px; font-size: 1.1rem; color: #cbd5e1;">
+                    Fondé en 2030 sur les ruines de l'ancien Weazel News, <strong>FROST NEWS</strong> est né d'une nécessité : offrir aux citoyens de San Andreas une information pure, sans filtre corpo ni censure d'État.
+                </p>
+                <p style="color: var(--text-muted); margin-bottom: 30px;">
+                    Nous utilisons des algorithmes de vérification décentralisés pour garantir que chaque mot publié est factuel. Nos serveurs sont situés dans des eaux internationales pour échapper à la juridiction du FIB.
+                </p>
+
+                <h3 style="color: var(--primary); margin-bottom: 15px; font-size:1rem;">NOS PRINCIPES</h3>
+                <ul style="color: var(--text-muted); list-style:none; padding:0;">
+                    <li style="margin-bottom:10px;"><i class="fa-solid fa-check" style="color:var(--primary); margin-right:10px;"></i> Indépendance financière totale</li>
+                    <li style="margin-bottom:10px;"><i class="fa-solid fa-check" style="color:var(--primary); margin-right:10px;"></i> Protection absolue des sources (Chiffrement AES-512)</li>
+                    <li><i class="fa-solid fa-check" style="color:var(--primary); margin-right:10px;"></i> Neutralité politique stricte</li>
+                </ul>
+            </div>
+
+            <div style="position: relative;">
+                <div style="position: absolute; top: -20px; right: -20px; width: 100px; height: 100px; border-top: 4px solid var(--primary); border-right: 4px solid var(--primary);"></div>
+                <img src="assets/bureau.png" style="width: 100%; border-radius: 4px; box-shadow: 0 0 50px rgba(0,0,0,0.8); filter: grayscale(50%) contrast(1.2);" alt="Rédaction">
+                <div style="position: absolute; bottom: -20px; left: -20px; width: 100px; height: 100px; border-bottom: 4px solid var(--primary); border-left: 4px solid var(--primary);"></div>
+            </div>
         </div>
     </main>
     <script src="js/components.js"></script>
