--- a/apropos.html
+++ b/apropos.html
@@ -35,7 +35,7 @@
 
             <div style="position: relative;">
                 <div style="position: absolute; top: -20px; right: -20px; width: 100px; height: 100px; border-top: 4px solid var(--primary); border-right: 4px solid var(--primary);"></div>
-                <img src="assets/bureau.png" style="width: 100%; border-radius: 4px; box-shadow: 0 0 50px rgba(0,0,0,0.8); filter: grayscale(50%) contrast(1.2);" alt="Rédaction">
+                <img src="assets/locaux.png" style="width: 100%; border-radius: 4px; box-shadow: 0 0 50px rgba(0,0,0,0.8); filter: grayscale(50%) contrast(1.2);" alt="Rédaction">
                 <div style="position: absolute; bottom: -20px; left: -20px; width: 100px; height: 100px; border-bottom: 4px solid var(--primary); border-left: 4px solid var(--primary);"></div>
             </div>
         </div>
