--- a/enquetes.html
+++ b/enquetes.html
@@ -19,7 +19,7 @@
         <div class="grid-3">
             <div class="card" style="border-color: rgba(255, 165, 0, 0.4);">
                 <div class="card-img">
-                    <img src="assets/bureau.png" alt="Investigation Room">
+                    <img src="assets/investigation.jpg" alt="Investigation Room">
                     <div style="position:absolute; inset:0; background:rgba(255,165,0,0.1);"></div>
                 </div>
                 <div class="card-content">
@@ -35,7 +35,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="assets/city2.png" alt="Cityscape">
+                    <img src="assets/city_business.jpg" alt="Cityscape">
                 </div>
                 <div class="card-content">
                     <span class="badge done">Publié</span>
@@ -47,7 +47,7 @@
 
             <div class="card">
                 <div class="card-img">
-                    <img src="assets/law.png" alt="Courthouse">
+                    <img src="assets/justice.jpg" alt="Courthouse">
                 </div>
                 <div class="card-content">
                     <span class="badge news">Archive 2034</span>
