--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
                 </h1>
                 
                 <p style="font-size: 1.2rem; color: #cbd5e1; max-width: 600px; margin: 0 auto 40px auto; text-shadow: 0 2px 4px rgba(0,0,0,0.8);">
-                    L'information brute de Los Santos. Vérifiée par algorithmes. Sans filtre corpo.
+                    L'information brute de Los Santos. Analysée par IA BNI. Sans filtre corpo.
                 </p>
                 
                 <div style="display:flex; justify-content:center; gap:20px;">
                     <button class="btn-cta" onclick="document.querySelector('.container').scrollIntoView()">
                         ACCÉDER AU FLUX
                     </button>
-                    <button class="btn-cta" style="background: transparent; color: white; border-color: rgba(255,255,255,0.3);">
-                        <i class="fa-solid fa-user-secret"></i> ACCÈS DARKNET
-                    </button>
-                </div>
+                    </div>
             </div>
         </section>
 
@@ -44,7 +41,9 @@
                 <h2 style="font-size:1.8rem; display:flex; align-items:center; gap:10px;">
                     <i class="fa-solid fa-bolt" style="color:var(--primary)"></i> FLASH ACTU
                 </h2>
-                <span style="font-family: monospace; color: var(--text-muted); font-size: 0.8rem;">SYNC: <span style="color:#0f0">ACTIF</span></span>
+                <span style="font-family: monospace; color: var(--text-muted); font-size: 0.8rem;">
+                    <i class="fa-solid fa-database" style="color:var(--primary); margin-right:5px;"></i> DATA BNI : <span style="color:#0f0">SYNCHRONISÉ</span>
+                </span>
             </div>
 
             <div class="grid-3"></div>
